# Colosseum

./: .gitignore  .gitmodules  UnrealPluginFiles.vcxproj  UnrealPluginFiles.vcxproj.filters  build.cmd  build.sh  clean.cmd  install_run_all.sh  mkdocs.yml  setup_only_ros.sh
.github/workflows/: test_docs.yml  test_ubuntu.yml  test_windows.yml
AirLib/: AirLib.vcxproj
PythonClient/airsim/: client.py  types.py
PythonClient/docs/: index.rst
PythonClient/multirotor/: add_drone.py  path.py
docs/: CHANGELOG.md  InfraredCamera.md  SUPPORT.md  Unity.md  adding_new_apis.md  airsim_ros_pkgs.md  airsim_tutorial_pkgs.md  apis.md  apis_cpp.md  azure.md  build_faq.md  build_linux.md  build_macos.md  build_windows.md  code_structure.md  coding_guidelines.md  create_issue.md  custom_drone.md  custom_unity_environments.md  design.md  dev_workflow.md  distance_sensor.md  docker_ubuntu.md  drone_survey.md  event_sim.md  faq.md  flight_controller.md  gazebo_drone.md  hello_drone.md  image_apis.md  lidar.md  meshes.md  modify_recording_data.md  multi_vehicle.md  object_detection.md  orbit.md  pfm.md  playback.md  point_clouds.md  px4_build.md  (+23 more)
pipelines/: ci.yml
ros2/src/airsim_ros_pkgs/: CMakeLists.txt  package.xml
ros2/src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h  airsim_ros_wrapper_warthog.h  pd_position_controller_simple.h  utils.h
ros2/src/airsim_ros_pkgs/launch/: airsim_node.launch.py  airsim_node_warthog.launch.py
ros2/src/airsim_ros_pkgs/src/: airsim_node_warthog.cpp  airsim_ros_wrapper.cpp  airsim_ros_wrapper_warthog.cpp
tools/: build_all_ue_projects.bat
(+335 files in other folders)
