<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>airsim_ros_pkgs</name>
  <version>0.0.1</version>
  <description>ROS Wrapper over AirSim's C++ client library</description>

  <maintainer email="ratneshmadaan@gmail.com">Ratnesh Madaan</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_runtime</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2</depend>
  
  <depend>airsim_interfaces</depend>

  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
    <exec_depend>joy</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
